--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -1,7 +1,28 @@
 <!DOCTYPE html>
+
 <html>
-<body>
-<h1>Assignment 5</h1>
-<p>Assignment 5 starts here.</p>
-</body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="mainstyle.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Sanchez&display=swap" rel="stylesheet">
+    <title>Muddy Paws</title>
+  </head>
+  <body>
+    <ul class="nav">
+      <li class="logo"><a href="index.html">Muddy Paws</a></li>
+      <li class="navitem"><a href="#myCart">My Cart</a></li>
+      <li class="navitem"><a href="productgallery.html">Products</a></li>
+    </ul>
+
+    <div class="mission">
+    Our mission at Muddy Paws is<br>to create a memorable experience<br>for you and your pets.
+    </div>
+
+    <div class="buttonlink">
+      <a href="productgallery.html">Shop Now</a>
+    </div>
+
+    <div class="headerimg">
+      <img class="header" src="images/dogheader.jpg" alt="Dog with harness">
+    </div>
+  </body>
 </html>
