--- a/assignment5/cart.html
+++ b/assignment5/cart.html
@@ -8,8 +8,14 @@
   </head>
 
   <body>
+    <ul class="nav">
+      <li class="logo"><a href="index.html">Muddy Paws</a></li>
+      <li class="navitem"><a href="cart.html">My Cart</a></li>
+      <li class="navitem"><a href="productgallery.html">Products</a></li>
+    </ul>
+
     <div class="featured">
       My Cart
     </div>
-    
+
   </body>
