--- a/assignment5/details.html
+++ b/assignment5/details.html
@@ -9,7 +9,7 @@
   <body>
     <ul class="nav">
       <li class="logo"><a href="index.html">Muddy Paws</a></li>
-      <li class="navitem"><a href="#myCart">My Cart</a></li>
+      <li class="navitem"><a href="cart.html">My Cart</a></li>
       <li class="navitem"><a href="productgallery.html">Products</a></li>
     </ul>
 
