--- a/assignment5/index.html
+++ b/assignment5/index.html
@@ -6,11 +6,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Sanchez&display=swap" rel="stylesheet">
     <title>Muddy Paws</title>
   </head>
-  
+
   <body>
     <ul class="nav">
       <li class="logo"><a href="index.html">Muddy Paws</a></li>
-      <li class="navitem"><a href="#myCart">My Cart</a></li>
+      <li class="navitem"><a href="cart.html">My Cart</a></li>
       <li class="navitem"><a href="productgallery.html">Products</a></li>
     </ul>
 
