--- a/assignment6a/cart.html
+++ b/assignment6a/cart.html
@@ -18,18 +18,25 @@
       My Cart
     </div>
 
-    <div class="cartCard">
-      <div class="productcard"><a href="details.html" class="detaillink">
-        <div class="cardimg">
-          <img class="resize" src="images/catbackpack.jpg" alt="Cat in carrier">
+    <div class="cartGrid">
+      <div class="cartProductCard"><a href="details.html" class="detaillink">
+        <div class="cartCardInnerGrid">
+          <div class="cardimg">
+            <img class="resize" src="images/catbackpack.jpg" alt="Cat in carrier">
+          </div>
+          <div class="cartCardTitle">
+            Cat Backpack
+          </div>
+          <div class="cardprice">
+            $49.95
+          </div>
+          <div class="cardprice">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed enim ut sem. Id consectetur purus ut faucibus pulvinar elementum integer enim neque.
+          </div>
+          <img class="cardrating" src="images/starrating.png">
+        </a>
         </div>
-        <div class="cardtext">
-          Cat Backpack
-        </div>
-        <div class="cardprice">
-          $49.95
-        </div>
-        <img class="cardrating" src="images/starrating.png">
-      </a></div>
+      </div>
+    </div>
 
   </body>
