--- a/assignment6a/cart.html
+++ b/assignment6a/cart.html
@@ -14,11 +14,14 @@
       <li class="navitem"><a href="productgallery.html">Products</a></li>
     </ul>
 
+    <!--header-->
     <div class="featured">
       My Cart
     </div>
 
     <div class="cartGrid">
+
+      <!--card 1-->
       <div class="cartProductCard"><a href="details.html" class="detaillink">
         <div class="cartCardInnerGrid">
           <div class="cardimg">
@@ -30,13 +33,32 @@
           <div class="cardprice">
             $49.95
           </div>
-          <div class="cardprice">
+          <div class="cartCardInfo">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed enim ut sem. Id consectetur purus ut faucibus pulvinar elementum integer enim neque.
           </div>
-          <img class="cardrating" src="images/starrating.png">
         </a>
         </div>
       </div>
+
+      <!--card 2-->
+      <div class="cartProductCard"><a href="details.html" class="detaillink">
+        <div class="cartCardInnerGrid">
+          <div class="cardimg">
+            <img class="resize" src="images/catbackpack.jpg" alt="Cat in carrier">
+          </div>
+          <div class="cartCardTitle">
+            Cat Backpack
+          </div>
+          <div class="cardprice">
+            $49.95
+          </div>
+          <div class="cartCardInfo">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed enim ut sem. Id consectetur purus ut faucibus pulvinar elementum integer enim neque.
+          </div>
+        </a>
+        </div>
+      </div>
+
     </div>
 
   </body>
