added styling to details page

--- a/assignment6a/details.html
+++ b/assignment6a/details.html
@@ -4,6 +4,7 @@
   <head>
     <link rel="stylesheet" type="text/css" href="mainstyle.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Sanchez&display=swap" rel="stylesheet">
+    <script src="mainfunc.js" type="text/javascript"></script>
     <title>Muddy Paws</title>
   </head>
   <body>
@@ -30,8 +31,28 @@
         Sizes
       </div>
 
-      <div>
-        <img src="images/sizes.png">
+<!--size grid + boxes-->
+      <div class="detailSizeGrid">
+        <div class ="detailSizeChoiceA" id="sizeTiny">
+          Tiny <br>
+          Chest 10" - 20"
+        </div>
+
+        <div class ="detailSizeChoiceB" id="sizeSmall">
+          Small <br>
+          Chest 20" - 25"
+        </div>
+
+        <div class ="detailSizeChoiceC" id="sizeMed">
+          Medium <br>
+          Chest 25" - 30"
+        </div>
+
+        <div class ="detailSizeChoiceD" id="sizeLarge">
+          Large <br>
+          Chest 30" - 40"
+        </div>
+
       </div>
 
       <div class="detailtext">
