--- a/assignment6a/details.html
+++ b/assignment6a/details.html
@@ -33,22 +33,22 @@
 
 <!--size grid + boxes-->
       <div class="detailSizeGrid">
-        <div class ="detailSizeChoiceA" id="sizeTiny">
+        <div id = "button1" onclick = "highlightButton()">
           Tiny <br>
           Chest 10" - 20"
         </div>
 
-        <div class ="detailSizeChoiceB" id="sizeSmall">
+        <div id = "button2" onclick = "highlightButton()">
           Small <br>
           Chest 20" - 25"
         </div>
 
-        <div class ="detailSizeChoiceC" id="sizeMed">
+        <div id = "button3" onclick = "highlightButton()">
           Medium <br>
           Chest 25" - 30"
         </div>
 
-        <div class ="detailSizeChoiceD" id="sizeLarge">
+        <div id = "button4" onclick = "highlightButton()">
           Large <br>
           Chest 30" - 40"
         </div>
