--- a/assignment6a/details.html
+++ b/assignment6a/details.html
@@ -4,7 +4,6 @@
   <head>
     <link rel="stylesheet" type="text/css" href="mainstyle.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Sanchez&display=swap" rel="stylesheet">
-    <script src="mainfunc.js" type="text/javascript"></script>
     <title>Muddy Paws</title>
   </head>
   <body>
@@ -33,22 +32,22 @@
 
 <!--size grid + boxes-->
       <div class="detailSizeGrid">
-        <div id = "button1" onclick = "highlightButton()">
+        <div class = "buttons" class = "buttongrid1" id = "button1" onclick = "highlightButton()">
           Tiny <br>
           Chest 10" - 20"
         </div>
 
-        <div id = "button2" onclick = "highlightButton()">
+        <div class = "buttons" class = "buttongrid2" id = "button2" onclick = "highlightButton()">
           Small <br>
           Chest 20" - 25"
         </div>
 
-        <div id = "button3" onclick = "highlightButton()">
+        <div class = "buttons" class = "buttongrid3" id = "button3" onclick = "highlightButton()">
           Medium <br>
           Chest 25" - 30"
         </div>
 
-        <div id = "button4" onclick = "highlightButton()">
+        <div class = "buttons" class = "buttongrid4" id = "button4" onclick = "highlightButton()">
           Large <br>
           Chest 30" - 40"
         </div>
@@ -71,3 +70,5 @@
         <img src="images/cartbutton.png">
       </div>
     </div>
+    <script src="mainfunc.js" type="text/javascript"></script>
+  </body>
