--- a/assignment6a/details.html
+++ b/assignment6a/details.html
@@ -31,23 +31,23 @@
       </div>
 
 <!--size grid + boxes-->
-      <div class="detailSizeGrid">
-        <div class = "buttons" class = "buttongrid1" id = "button1" onclick = "highlightButton()">
+      <div class="detailSizeGrid" id = "light">
+        <div id = "button1">
           Tiny <br>
           Chest 10" - 20"
         </div>
 
-        <div class = "buttons" class = "buttongrid2" id = "button2" onclick = "highlightButton()">
+        <div id = "button2">
           Small <br>
           Chest 20" - 25"
         </div>
 
-        <div class = "buttons" class = "buttongrid3" id = "button3" onclick = "highlightButton()">
+        <div id = "button3">
           Medium <br>
           Chest 25" - 30"
         </div>
 
-        <div class = "buttons" class = "buttongrid4" id = "button4" onclick = "highlightButton()">
+        <div id = "button4">
           Large <br>
           Chest 30" - 40"
         </div>
