--- a/assignment6a/details.html
+++ b/assignment6a/details.html
@@ -32,22 +32,22 @@
 
 <!--size grid + boxes-->
       <div class="detailSizeGrid" id = "light">
-        <div id = "button1">
+        <div id = "button1" class = "buttons">
           Tiny <br>
           Chest 10" - 20"
         </div>
 
-        <div id = "button2">
+        <div id = "button2" class = "buttons">
           Small <br>
           Chest 20" - 25"
         </div>
 
-        <div id = "button3">
+        <div id = "button3" class = "buttons">
           Medium <br>
           Chest 25" - 30"
         </div>
 
-        <div id = "button4">
+        <div id = "button4" class = "buttons">
           Large <br>
           Chest 30" - 40"
         </div>
