--- a/assignment6a/details.html
+++ b/assignment6a/details.html
@@ -9,7 +9,10 @@
   <body>
     <ul class="nav">
       <li class="logo"><a href="index.html">Muddy Paws</a></li>
-      <li class="navitem"><a href="cart.html">My Cart</a></li>
+      <li class="navitem">
+        <a href="cart.html">My Cart</a>
+        <a id="cartCount"></a>
+      </li>
       <li class="navitem"><a href="productgallery.html">Products</a></li>
     </ul>
 
@@ -31,23 +34,23 @@
       </div>
 
 <!--size grid + boxes-->
-      <div class="detailSizeGrid" id = "light">
-        <div id = "button1" class = "buttons">
+      <div class="detailSizeGrid" id="light">
+        <div id="button1">
           Tiny <br>
           Chest 10" - 20"
         </div>
 
-        <div id = "button2" class = "buttons">
+        <div id="button2">
           Small <br>
           Chest 20" - 25"
         </div>
 
-        <div id = "button3" class = "buttons">
+        <div id="button3">
           Medium <br>
           Chest 25" - 30"
         </div>
 
-        <div id = "button4" class = "buttons">
+        <div id="button4">
           Large <br>
           Chest 30" - 40"
         </div>
@@ -66,9 +69,10 @@
         Qty
       </div>
 
-      <div>
-        <img src="images/cartbutton.png">
+      <div class = "detailsButton" id = "cartButton" onclick="changeCartText()">
+        Add to Cart
       </div>
+
     </div>
     <script src="mainfunc.js" type="text/javascript"></script>
   </body>
