~ workin on my night scripts ~

--- a/assignment6a/cart.html
+++ b/assignment6a/cart.html
@@ -38,7 +38,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed enim ut sem. Id consectetur purus ut faucibus pulvinar elementum integer enim neque.
           </div>
         </a>
-        <p id="card1">delete</p>
+        <p class="cartCardTitle" id="card1">Remove</p>
         </div>
       </div>
 
@@ -62,17 +62,6 @@
       </div>
 
     </div>
-    <script>
-    var x = document.getElementById("card1");
-
-    x.addEventListener('click', function(){
-      // alert("11111");
-        console.log(x.parentElement);
-        x.parentElement.parentElement.style.display = "none";
-    });
-
-    </script>
+    <script src="cartfunc.js" type="text/javascript"></script>
   </body>
   </html>
-
-  </body>
