ch ch ch ch changes

--- a/assignment6a/cart.html
+++ b/assignment6a/cart.html
@@ -10,7 +10,9 @@
   <body>
     <ul class="nav">
       <li class="logo"><a href="index.html">Muddy Paws</a></li>
-      <li class="navitem"><a href="cart.html">My Cart</a></li>
+      <li class="navitem">
+        <a href="cart.html">My Cart</a>
+        <a id="cartCount"></a></li>
       <li class="navitem"><a href="productgallery.html">Products</a></li>
     </ul>
 
@@ -62,6 +64,6 @@
       </div>
 
     </div>
-    <script src="cartfunc.js" type="text/javascript"></script>
+    <script src="mainfunc.js" type="text/javascript"></script>
   </body>
   </html>
