--- a/assignment6a/details.html
+++ b/assignment6a/details.html
@@ -76,12 +76,12 @@
         </div>
       </div>
 
-<!--quantity select-->
+<!--quantity select--><!--
       <div class="detailtext">
         Qty
         <input type="number" name="Qty" min="1" max="10" id="qty">
       </div>
-
+-->
       <div class = "detailsButton" id = "cartButton" onclick="changeCartText()">
         Add to Cart
       </div>
