--- a/assignment6a/details.html
+++ b/assignment6a/details.html
@@ -11,7 +11,7 @@
       <li class="logo"><a href="index.html">Muddy Paws</a></li>
       <li class="navitem">
         <a href="cart.html">My Cart</a>
-        <a id="cartCount"></a>
+        <a id="cartcount"></a>
       </li>
       <li class="navitem"><a href="productgallery.html">Products</a></li>
     </ul>
@@ -62,7 +62,7 @@
         Colors
       </div>
 
-      <div class="detailcolorgrid" id="colorGrid">
+      <div class="detailcolorgrid" id="colorgrid">
         <div class="detailcolors1" id="detailcolorselect1">
         </div>
 
