--- a/assignment6a/cart.html
+++ b/assignment6a/cart.html
@@ -12,18 +12,18 @@
       <li class="logo"><a href="index.html">Muddy Paws</a></li>
       <li class="navitem">
         <a href="cart.html">My Cart</a>
-        <a id="cartCount"></a></li>
+        <a id="cartcount"></a></li>
       <li class="navitem"><a href="productgallery.html">Products</a></li>
     </ul>
 
-    <!--header-->
+<!--header-->
     <div class="featured">
       My Cart
     </div>
 
     <div class="cartGrid">
 
-      <!--card 1-->
+<!--card 1-->
       <div class="cartProductCard">
         <a href="details.html" class="detaillink">
         <div class="cartCardInnerGrid">
@@ -44,7 +44,7 @@
         </div>
       </div>
 
-      <!--card 2-->
+<!--card 2-->
       <div class="cartProductCard"><a href="details.html" class="detaillink">
         <div class="cartCardInnerGrid">
           <div class="cardimg">
@@ -60,6 +60,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Suscipit tellus mauris a diam maecenas sed enim ut sem. Id consectetur purus ut faucibus pulvinar elementum integer enim neque.
           </div>
         </a>
+        <p class="cartCardTitle" id="card2">Remove</p>
         </div>
       </div>
 
