--- a/puifinal/main.html
+++ b/puifinal/main.html
@@ -65,12 +65,12 @@ move everything to center -->
     </div>
     </nav>
 
-    <div class="container">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-sm">
           One of three columns
         </div>
-        <div class="col-sm-auto">
+        <div class="col-sm">
           <div class="mainQuestion">
           What's on the menu?
           </div>
