--- a/puifinal/main.html
+++ b/puifinal/main.html
@@ -85,8 +85,19 @@ move everything to center -->
         </div>
         <div class="col-sm">
           <div class="type-wrap">
-          <span id="typed5" class="headText" style="white-space:pre;"></span>
+          <span id="typed5" class="headText" style="white-space:pre;">.</span>
           </div>
+        </div>
+        <div class="col-sm">
+          One of three columns
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm">
+          <!-- <img src="pics/burg.png"> -->
+        </div>
+        <div class="col-sm">
+
         </div>
         <div class="col-sm">
           One of three columns
@@ -135,7 +146,7 @@ move everything to center -->
     });
 
     var typed5 = new Typed('#typed5', {
-      strings: ['hamburger', 'bento', 'doner', 'kebab', 'meatball'],
+      strings: ['hamburger', 'bento', 'döner', 'kebab', 'meatball'],
       typeSpeed: 35,
       backSpeed: 30,
       cursorChar: '',
