--- a/puifinal/main.html
+++ b/puifinal/main.html
@@ -29,8 +29,7 @@ move everything to center -->
         This is where text goes!
       </div> -->
 
-
-
+    <!-- dropdown menu middle 1 -->
     <div id="myDropdown" class="dropdown">
       <div class="dropdownHolder">
       <h2 class="menuHeader">Bento menus</h2>
@@ -44,7 +43,7 @@ move everything to center -->
     </div>
 
     <!-- header text grid -->
-    <div class="container-fluid">
+    <div class="container-fluid mainGrid">
       <div class="row">
         <div class="col-sm">
         </div>
@@ -86,6 +85,8 @@ move everything to center -->
         </div>
       </div>
     </div>
+
+
 
     <!-- <span id="sidebarBtn">open side menu</span> -->
     <div id="mySidebar" class="menu"></div>
@@ -144,7 +145,7 @@ move everything to center -->
       strings: ['hamburger', 'bento', 'döner', 'kebab'],
       typeSpeed: 35,
       backSpeed: 30,
-      cursorChar: '',
+      cursorChar: '__',
       shuffle: true,
       smartBackspace: false,
       loop: true
