--- a/puifinal/main.html
+++ b/puifinal/main.html
@@ -18,7 +18,7 @@ move everything to center -->
     <!-- typed css -->
     <!-- <link href="typed/demos.css" rel="stylesheet"/> -->
 
-    <title>Hello, world!</title>
+    <title>What's on the Menu?</title>
 
 
   </head>
