--- a/puifinal/main.html
+++ b/puifinal/main.html
@@ -1,6 +1,5 @@
 <!-- to do
-use type.js for header ("bento, hamburger, doner, kebab, meatball")
-move everything to center -->
+ -->
 
 <!doctype html>
 <html lang="en">
@@ -71,7 +70,7 @@ move everything to center -->
       <div class="container">
         <div class="row">
           <div class="col-sm">
-            <img class="foodIcon" id="hamburgerOpen" src="pics/burg.png">
+            <img class="foodIcon burgCloser" id="hamburgerOpen" src="pics/burg.png">
           </div>
           <div class="col-sm">
             <img class="foodIcon" src="pics/doner.png">
@@ -90,7 +89,8 @@ move everything to center -->
     <div id="mySidebar" class="menu"></div>
     <div id="sidebarTwo" class="menu2"></div>
     <div id="sidebarThree" class="menu3">
-      <div id="closer" class="closeBtn">CLOSE</div>
+      <!-- <div id="closer" class="closeBtn">CLOSE</div> -->
+        <img class="burgIcon" src="pics/burgicon.png">
       <h2 class="hamburgerHeader menuHeader">Hamburger Menus</h2>
       <div class="paragraphHolder">
         <p class="menuText">Hamburger menus are named for the buttons that activate them, which are themselves named because of their shape's similarity to
