--- a/puifinal/main.html
+++ b/puifinal/main.html
@@ -30,6 +30,7 @@
 
     <!-- dropdown menu middle 1 -->
     <div id="myDropdown" class="dropdown">
+      <img class="bentoicon" src="pics/bentoicon.png">
       <div class="dropdownHolder">
       <h2 class="menuHeader">Bento menus</h2>
       <p class="menuText">Bento menus are named for the bento box appearance of both the icon and the menus contained within. Bento icons show
