--- a/puifinal/main.html
+++ b/puifinal/main.html
@@ -71,7 +71,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm">
-            <img class="foodIcon burgCloser" id="hamburgerOpen" src="pics/burg.png">
+            <img class="foodIcon" id="hamburgerOpen" src="pics/burg.png">
           </div>
           <div class="col-sm">
             <img class="foodIcon" src="pics/doner.png">
@@ -80,7 +80,7 @@
             <img class="foodIcon" id="dropdownBtn" src="pics/bento.png">
           </div>
           <div class="col-sm">
-            <img class="foodIcon" src="pics/kebab.png">
+            <img class="foodIcon" id="kebabOpen" src="pics/kebab.png">
           </div>
         </div>
       </div>
@@ -90,9 +90,22 @@
     <div id="mySidebar" class="menu"></div>
     <div id="sidebarTwo" class="menu2"></div>
     <div id="sidebarThree" class="menu3">
-      <!-- <div id="closer" class="closeBtn">CLOSE</div> -->
-        <img class="burgIcon" src="pics/burgicon.png">
+      <img class="burgIcon" src="pics/burgicon.png">
       <h2 class="hamburgerHeader menuHeader">Hamburger Menus</h2>
+      <div class="paragraphHolder">
+        <p class="menuText">Hamburger menus are named for the buttons that activate them, which are themselves named because of their shape's similarity to
+          the food, are a way of hiding a menu while saving space in a crowded interface. The resemblance was likely unintentional, borne of
+          the need for an icon to represent a list of menu items.
+          <br><br>The hamburger icon evolved from an older design
+        </p>
+      </div>
+    </div>
+
+    <div id="kebabMenu" class="kebabPanel"></div>
+    <div id="kebabMenuTwo" class="kebabPanelTwo"></div>
+    <div id="kebabMenuThree" class="kebabPanelThree">
+      <img class="kebabIcon" src="pics/kebabicon.png">
+      <h2 class="kebabHeader menuHeader">Kebab Menus</h2>
       <div class="paragraphHolder">
         <p class="menuText">Hamburger menus are named for the buttons that activate them, which are themselves named because of their shape's similarity to
           the food, are a way of hiding a menu while saving space in a crowded interface. The resemblance was likely unintentional, borne of
