--- a/puifinal/main.html
+++ b/puifinal/main.html
@@ -105,7 +105,7 @@
     <div id="kebabMenuTwo" class="kebabPanelTwo"></div>
     <div id="kebabMenuThree" class="kebabPanelThree">
       <img class="kebabIcon" src="pics/kebabicon.png">
-      <h2 class="kebabHeader menuHeader">Kebab Menus</h2>
+      <h2 class="hamburgerHeader menuHeader">Kebab Menus</h2>
       <div class="paragraphHolder">
         <p class="menuText">Hamburger menus are named for the buttons that activate them, which are themselves named because of their shape's similarity to
           the food, are a way of hiding a menu while saving space in a crowded interface. The resemblance was likely unintentional, borne of
