add doner menu, make doner/bento play nice(ish)

--- a/puifinal/main.html
+++ b/puifinal/main.html
@@ -29,10 +29,23 @@
       </div> -->
 
     <!-- dropdown menu middle 1 -->
-    <div id="myDropdown" class="dropdown">
+    <div id="bentoDropdown" class="dropdown">
       <img class="bentoicon" src="pics/bentoicon.png">
       <div class="dropdownHolder">
       <h2 class="menuHeader">Bento menus</h2>
+      <p class="menuText">Bento menus are named for the bento box appearance of both the icon and the menus contained within. Bento icons show
+        squares arranged in a three-by-three grid to reflect the organization of the items held in their menus. Items are organized in a grid
+        with icons for each. This type of menu saves some space, but requires some specific dimensions because of the more square nature
+        of the organization grid. This type of menu is used less often than hamburger style menus in mobile, but can be seen a bit more
+        in desktop and tablet applications where space is not as limited.
+      </p>
+      </div>
+    </div>
+
+    <div id="donerDropdown" class="dropdown">
+      <img class="donericon" src="pics/donericon.png">
+      <div class="dropdownHolder">
+      <h2 class="menuHeader">Döner menus</h2>
       <p class="menuText">Bento menus are named for the bento box appearance of both the icon and the menus contained within. Bento icons show
         squares arranged in a three-by-three grid to reflect the organization of the items held in their menus. Items are organized in a grid
         with icons for each. This type of menu saves some space, but requires some specific dimensions because of the more square nature
@@ -74,10 +87,10 @@
             <img class="foodIcon" id="hamburgerOpen" src="pics/burg.png">
           </div>
           <div class="col-sm">
-            <img class="foodIcon" src="pics/doner.png">
+            <img class="foodIcon" id="donerBtn" src="pics/doner.png">
           </div>
           <div class="col-sm">
-            <img class="foodIcon" id="dropdownBtn" src="pics/bento.png">
+            <img class="foodIcon" id="bentoBtn" src="pics/bento.png">
           </div>
           <div class="col-sm">
             <img class="foodIcon" id="kebabOpen" src="pics/kebab.png">
